tests/negative/yield_top_level.xs
-- EXPECT_ERROR: S0040
yield 99
